Fix typos and finalize project

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!--Slide1-->
             <section style="background-color: black;">
                 <div class="aligncenter fadeInUp">
-                    <h1 class="open">System Adminstrator Workshop</h1>
+                    <h1 class="open">System Administrator Workshop</h1>
                     <img src="images/spotify-yellow.svg"  class="spot-img" alt="">
                     <p class="name">Presented by Sameer Kotecha</p>
                 </div>
@@ -49,7 +49,7 @@
                             <ul>
                                 <li class="bullet">Communicate to Developers about <span class="bold-1">User Access Testing</span> </li>
                                 <li class="bullet">Communicate to both Developers and Users about 
-                                    Production deployment. Including <span class="bold-1">downtime</span> , and <span class="bold-1">pausing
+                                    Production deployment. Including <span class="bold-1">downtime</span>, and <span class="bold-1">pausing
                                     of workflows</span>
                                 </li>
                             </ul>
@@ -72,7 +72,9 @@
                                 <p>We would like to inform you that the DocuSign CLM December 20.9 Product
                                     Release is scheduled to be deployed to the PROD environment on 
                                     Thursday, November 19, 2020, between 8:00 PM and 11:00 PM, US 
-                                    Central Time. During this time, users may not be able to access 
+                                    Central Time.
+                                </p>
+                                <p>During this time, users may not be able to access 
                                     the system, and workflows will be paused during the duration of the 
                                     window and resumed upon completion of the window.
                                 </p>
@@ -130,7 +132,7 @@
                                 </li>
                                 <li class="bullet">Communicate to users about new <span class="bold-1">workflow changes</span></li>
                                 <li class="bullet">Communicate to users about changes to <span class="bold-1">public </span>eForms 
-                                    and use of <span class="bold-1">Javascript</span> within eForms.
+                                    and the use of <span class="bold-1">Javascript</span> within eForms.
                                 </li>
                             </ul>
                         </div>
@@ -327,7 +329,7 @@
                         </div>
                         <div class="column">
                             <ul>
-                                <li class="bullet">Student ID can be used as an <span class="bold-2">unique identifier </span>
+                                <li class="bullet">Student ID can be used as a <span class="bold-2">unique identifier </span>
                                     instead of SSN
                                 </li>
                                 <li class="bullet">We can <span class="bold-2">hash</span> student’s SSN to make the data more
@@ -367,6 +369,7 @@
                     <p>Finally, we want to remind stakeholders of the privacy rights that students have. Any release of student information must be done with the student's 
                         permission, and their privacy rights must be respected at all times.
                     </p>
+                    <p>Thank you for your understanding and your commitment to our students' well-being.</p>
                 </div>
             </section>
             <!--Slide 11-->
@@ -427,12 +430,12 @@
             <section class="bg-3">
                 <header class="aligncenter">
                     <h1 class="head-1">Scenario #3</h1>
-                    <p class="sub-3">Conduct Data Invetory and Migration</p>
+                    <p class="sub-3">Conduct Data Inventory and Migration</p>
                 </header>
                 <div class="grid vertical-align">
                     <div class="column">
                         <ul>
-                            <li class="bullet">Identify possible data to be <span class="bold-3">transferred</span>, invoices, user profiles, ect.</li>
+                            <li class="bullet">Identify possible data to be <span class="bold-3">transferred</span>, invoices, user profiles, etc.</li>
                             <li class="bullet">Perform <span class="bold-3">data mapping</span> with this data</li>
                             <li class="bullet">Create a <span class="bold-3">backup</span> of the current data</li>
                             <li class="bullet">Find out the most efficient way to <span class="bold-3">migrate</span> the data </li>
@@ -456,8 +459,8 @@
                         <ul>
                             <li class="bullet">Create <span class="bold-3">use cases</span> for all workflows in the new platform</li>
                             <li class="bullet">Identify all users and give <span class="bold-3">permissions</span> based on use cases</li>
-                            <li class="bullet">Identify existing workflows, <span class="bold-3">invoicing, billing, collection</span>, ect</li>
-                            <li class="bullet"><span class="bold-3">Configure</span> workflows on new platform to match workflows on the old one </li>
+                            <li class="bullet">Identify existing workflows, <span class="bold-3">invoicing, billing, collection</span>, etc</li>
+                            <li class="bullet"><span class="bold-3">Configure</span> workflows on the new platform to match workflows on the old one </li>
                             <li class="bullet">Find out how existing workflows can be <span class="bold-3">optimized</span> using the new platform</li>
                         </ul>
                     </div>
@@ -475,10 +478,10 @@
                 <div class="grid vertical-align">
                     <div class="column">
                         <ul>
-                            <li class="bullet">Test platform for <span class="bold-3">functionality, compatibility,</span> and <span class="bold-3">Security</span></li>
+                            <li class="bullet">Test platform for <span class="bold-3">functionality, compatibility,</span> and <span class="bold-3">security</span></li>
                             <li class="bullet">Conduct a <span class="bold-3">quality assurance</span> test to find any bugs or errors</li>
-                            <li class="bullet">Check to see if things like the <span class="bold-3">accounting</span> and <span class="bold-3">billing system</span> are integrated</li>
-                            <li class="bullet">Set up <span class="bold-3">UAT</span> to make sure workflow are configured correctly</li>
+                            <li class="bullet">Check to see if things like the <span class="bold-3">accounting</span> and <span class="bold-3">billing systems</span> are integrated</li>
+                            <li class="bullet">Set up <span class="bold-3">UAT</span> to make sure workflows are configured correctly</li>
                             <li class="bullet">Validate once more if all data has been <span class="bold-3">transferred correctly</span></li>
                         </ul>
                     </div>
