--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <ul>
                                 <li class="bullet">Communicate to Developers about <span class="bold-1">User Access Testing</span> </li>
                                 <li class="bullet">Communicate to both Developers and Users about 
-                                    Production deployment. Including <span class="bold-1">downtime</span>, and <span class="bold-1">pausing
+                                    Production deployment. Including <span class="bold-1">downtime,</span> and <span class="bold-1">pausing
                                     of workflows</span>
                                 </li>
                             </ul>
@@ -132,7 +132,7 @@
                                 </li>
                                 <li class="bullet">Communicate to users about new <span class="bold-1">workflow changes</span></li>
                                 <li class="bullet">Communicate to users about changes to <span class="bold-1">public </span>eForms 
-                                    and the use of <span class="bold-1">Javascript</span> within eForms.
+                                    and the use of <span class="bold-1">Javascript</span> within eForms
                                 </li>
                             </ul>
                         </div>
@@ -415,8 +415,8 @@
                 <div class="grid vertical-align">
                     <div class="column">
                         <ul>
-                            <li class="bullet">Define the project scope, which includes <span class="bold-3">goals</span>, <span class="bold-3">deadlines</span>, and <span class="bold-3">deliverables</span></li>
-                            <li class="bullet">Engage in discussions with <span class="bold-3">stakeholders</span> to ensure that our planning is aligned appropriately.</li>
+                            <li class="bullet">Define the project scope, which includes <span class="bold-3">goals,</span> <span class="bold-3">deadlines,</span> and <span class="bold-3">deliverables</span></li>
+                            <li class="bullet">Engage in discussions with <span class="bold-3">stakeholders</span> to ensure that our planning is aligned appropriately</li>
                             <li class="bullet">Identify any <span class="bold-3">problems</span> early on</li>
                             <li class="bullet">Create a <span class="bold-3">project scope statement</span></li>
                         </ul>
@@ -435,7 +435,7 @@
                 <div class="grid vertical-align">
                     <div class="column">
                         <ul>
-                            <li class="bullet">Identify possible data to be <span class="bold-3">transferred</span>, invoices, user profiles, etc.</li>
+                            <li class="bullet">Identify possible data to be <span class="bold-3">transferred</span>, invoices, user profiles, etc</li>
                             <li class="bullet">Perform <span class="bold-3">data mapping</span> with this data</li>
                             <li class="bullet">Create a <span class="bold-3">backup</span> of the current data</li>
                             <li class="bullet">Find out the most efficient way to <span class="bold-3">migrate</span> the data </li>
@@ -459,7 +459,7 @@
                         <ul>
                             <li class="bullet">Create <span class="bold-3">use cases</span> for all workflows in the new platform</li>
                             <li class="bullet">Identify all users and give <span class="bold-3">permissions</span> based on use cases</li>
-                            <li class="bullet">Identify existing workflows, <span class="bold-3">invoicing, billing, collection</span>, etc</li>
+                            <li class="bullet">Identify existing workflows, <span class="bold-3">invoicing, billing, collection,</span> etc</li>
                             <li class="bullet"><span class="bold-3">Configure</span> workflows on the new platform to match workflows on the old one </li>
                             <li class="bullet">Find out how existing workflows can be <span class="bold-3">optimized</span> using the new platform</li>
                         </ul>
