Add transitions to images and fix typos

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                         </ul>
                     </div>
                     <div class="column">
-                        <img src="images/scope.png" class="img">
+                        <img src="images/scope.png" class="img fadeIn slow">
                     </div>
                 </div>
             </section>
@@ -439,12 +439,12 @@
                             <li class="bullet">Perform <span class="bold-3">data mapping</span> with this data</li>
                             <li class="bullet">Create a <span class="bold-3">backup</span> of the current data</li>
                             <li class="bullet">Find out the most efficient way to <span class="bold-3">migrate</span> the data </li>
-                            <li class="bullet">Conduct a <span class="bold-3"></span>trial migration</li>
+                            <li class="bullet">Conduct a <span class="bold-3">trial</span> migration</li>
                             <li class="bullet"><span class="bold-3">Execute</span> the migration and <span class="bold-3">verify</span> the data was transferred accurately </li>
                         </ul>
                     </div>
                     <div class="column">
-                        <img src="images/data.png" class="img">
+                        <img src="images/data.png" class="img fadeIn slow">
                     </div>
                 </div>
             </section>
@@ -465,7 +465,7 @@
                         </ul>
                     </div>
                     <div class="column">
-                        <img src="images/work.png" class="img">
+                        <img src="images/work.png" class="img fadeIn slow">
                     </div>
                 </div>
             </section>
@@ -486,7 +486,7 @@
                         </ul>
                     </div>
                     <div class="column">
-                        <img src="images/testing.png" class="img">
+                        <img src="images/testing.png" class="img fadeIn slow">
                     </div>
                 </div>
             </section>
@@ -506,7 +506,7 @@
                         </ul>
                     </div>
                     <div class="column">
-                        <img src="images/rollout.png" class="img">
+                        <img src="images/rollout.png" class="img fadeIn slow">
                     </div>
                 </div>
             </section>
