Create last minute changes

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                     auto-publish SSNs with full names and grades at the end of the marking 
                                     period on a secure website. Your teammates and management think this is 
                                     bad for a number of reasons. <span class="bold-2">Can you identify why this might not be a 
-                                        great idea and how would you communicate this to your stakeholders? </span>
+                                        great idea</span> and how would you communicate this to your stakeholders?
                                     Feel free to provide email samples, mock ups, or anything else you might 
                                     find relevant.
                                 </p>
@@ -298,7 +298,7 @@
                                 <li class="bullet">If the data is compromised, <span class="bold-2">identity theft, legal trouble, and reputation damage</span>
                                 </li>
                                 <li class="bullet">Certain laws/acts protect releasing confidential
-                                    information about students (<span class="bold-2">FERPA, COPPA</span>)
+                                    information about students <span class="bold-2">(FERPA)</span>
                                 </li>
                             </ul>
                         </div>
@@ -320,8 +320,8 @@
                                     SSN/Student ID. Your stakeholders are requesting that the application 
                                     auto-publish SSNs with full names and grades at the end of the marking 
                                     period on a secure website. Your teammates and management think this is 
-                                    bad for a number of reasons. <span class="bold-2">Can you identify why this might not be a 
-                                        great idea and how would you communicate this to your stakeholders? </span>
+                                    bad for a number of reasons. Can you identify why this might not be a 
+                                    great idea and<span class="bold-2">  how would you communicate this to your stakeholders? </span>
                                     Feel free to provide email samples, mock ups, or anything else you might 
                                     find relevant.
                                 </p>
